--- a/_columns/Swing_Trading/zh-cn/2024-09-27.md
+++ b/_columns/Swing_Trading/zh-cn/2024-09-27.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Short Run In ONON Stock Gave Quick Profit
+  Short Run In ONON Stock Gave Quick Profit	ONON 股票的短期获利
 date: 2024-09-27 16:11 -0700
 image: /assets/img/swing-trading/2024-09-27.jpg
 author: JUSTIN NIELSEN
@@ -11,27 +11,22 @@ author: JUSTIN NIELSEN
 
 
 
-Rather than hold a stock for a long move, sometimes it's best to take the quick profit when you have it. When ONON stock started running, a 10% profit in one week was enough to satisfy us. Here's how we handled the trade.
+Rather than hold a stock for a long move, sometimes it's best to take the quick profit when you have it. When ONON stock started running, a 10% profit in one week was enough to satisfy us. Here's how we handled the trade.  
+与其长期持有一只股票，有时最好在拥有它时快速获利。当 ONON 股票开始运行时，一周内 10% 的利润足以让我们满意。以下是我们处理交易的方式。
 
 
 
 
-Lacing Up ONON Stock
---------------------
+Lacing Up ONON Stock 系带 ONON 股票
+-------------------------------
 
 
-Shoemakers often can change leadership and that seems to be happening now with Swiss-based shoemaker **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)). Its last earnings report **(1)** showed a lot of price discovery but started a solid run **(2)**. Rival **Deckers Outdoor** ([DECK](https://research.investors.com/quote.aspx?symbol=DECK)) led for most of the prior two years but gave up its leadership mantle in May.
+Shoemakers often can change leadership and that seems to be happening now with Swiss-based shoemaker **On Holding** ([ONON](https://research.investors.com/quote.aspx?symbol=ONON)). Its last earnings report **(1)** showed a lot of price discovery but started a solid run **(2)**. Rival **Deckers Outdoor** ([DECK](https://research.investors.com/quote.aspx?symbol=DECK)) led for most of the prior two years but gave up its leadership mantle in May.  
+鞋匠经常可以更换领导层，现在瑞士鞋商 **On Holding** （[ONON）](https://research.investors.com/quote.aspx?symbol=ONON) 似乎正在发生这种情况。其上一份收益报告 **（1）** 显示了大量价格发现，但开始了稳健的运行**（2）。**竞争对手 **Deckers Outdoor** （[DECK](https://research.investors.com/quote.aspx?symbol=DECK)） 在过去两年的大部分时间里都处于领先地位，但在 5 月放弃了领导地位。
 
 
-After a weak start in the stock market for September, ONON stock found support at its 21-day line **(3)**. It then tightened up for the next few days. When indexes showed a big upside reversal on Sept. 11, ONON stock again got support at its 21-day and was an early mover **(4)**. It joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) that day.
-
-
-
-
----
-
-
-[**Now that the Fed started its cutting cycle, David Saito-Chung explains what we should expect**](https://www.investors.com/ibd-videos/videos/this-is-whats-next-for-the-market-according-to-fed-rate-cut-history)
+After a weak start in the stock market for September, ONON stock found support at its 21-day line **(3)**. It then tightened up for the next few days. When indexes showed a big upside reversal on Sept. 11, ONON stock again got support at its 21-day and was an early mover **(4)**. It joined [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) that day.  
+在 9 月份股市开局疲软之后，ONON 股票在其 21 日线 **（3）** 找到支撑。然后在接下来的几天里，它收紧了。当指数在 9 月 11 日出现大幅上行逆转时，ONON 股票在 21 天再次获得支撑，并且是先发者 **（4）。**它当天加入了 [SwingTrader](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。
 
 
 
@@ -39,45 +34,65 @@ After a weak start in the stock market for September, ONON stock found support a
 ---
 
 
-ONON started as a half position as we tested the waters but due to its strength we added another quarter position later the same day after making progress.
-
-
-We finished our position with another quarter the next day **(5)** making it a full position. ONON was breaking above resistance from its Aug. 27 high **(2)**, but we were already at a 7% gain from our initial entry. We stayed content with our full position and low average cost.
-
-
-September Starts On Rocky Road
-------------------------------
-
-
-As ONON edged higher we enjoyed the gains and let it run. But a strong pop on Sept. 18 seemed like a gift that made it worth locking in  some profits **(6)**. We were up 4% from our latest quarter add and we trimmed that quarter. We had an 11% gain from our initial entry.
-
-
-The next day saw the stock reverse the gains and we started selling as it kept dropping throughout the day **(7)**. By the end of the day, we were out of ONON with over a 9% gain in the trade in just under a week.
-
-
-But that doesn't mean we are done with the stock. Usually a reversal like that would lead to more weakness in the short term. And ONON did get worse the next day but then it held tight over the next four days **(8)**.
-
-
-The tight action is a strong cue that this stock might be ready to go again.
+[**Now that the Fed started its cutting cycle, David Saito-Chung explains what we should expect  
+现在美联储开始了降息周期，David Saito-Chung 解释了我们应该期待什么**](https://www.investors.com/ibd-videos/videos/this-is-whats-next-for-the-market-according-to-fed-rate-cut-history)
 
 
 
-*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).*
+
+---
 
 
-**YOU MAY ALSO LIKE:**
+ONON started as a half position as we tested the waters but due to its strength we added another quarter position later the same day after making progress.  
+ONON 在我们试水时开始时是半位，但由于它的强度，我们在取得进展后的同一天晚些时候又增加了四分之一位。
 
 
-[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+We finished our position with another quarter the next day **(5)** making it a full position. ONON was breaking above resistance from its Aug. 27 high **(2)**, but we were already at a 7% gain from our initial entry. We stayed content with our full position and low average cost.  
+第二天我们又用四分之一 **（5）** 平仓，使其成为一个完整的头寸。ONON 突破了 8 月 27 日高点 **（2）** 的阻力位，但我们已经从最初的入场点上涨了 7%。我们对自己的全部头寸和较低的平均成本感到满意。
 
 
-[Warren Buffett turned 94! How different is his trading style from The IBD Methodology?](https://www.investors.com/how-to-invest/warren-buffett-lessons-active-growth-investors/)
+September Starts On Rocky Road九月从崎岖之路开始
+---------------------------------------
 
 
-[Eric Krull Shares How This Market Rally Stacks Up To History](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
+As ONON edged higher we enjoyed the gains and let it run. But a strong pop on Sept. 18 seemed like a gift that made it worth locking in  some profits **(6)**. We were up 4% from our latest quarter add and we trimmed that quarter. We had an 11% gain from our initial entry.  
+随着 ONON 小幅走高，我们享受了收益并让它运行。但 9 月 18 日的强劲流行似乎是一份礼物，值得锁定一些利润 **（6）。**我们比最近一个季度的增长增长了 4%，并且我们削减了该季度的预算。我们从最初的进入中获得了 11% 的收益。
 
 
-[Follow Premarket And After-The-Open Action With IBD Experts](https://get.investors.com/ibd-live/)
+The next day saw the stock reverse the gains and we started selling as it kept dropping throughout the day **(7)**. By the end of the day, we were out of ONON with over a 9% gain in the trade in just under a week.  
+第二天，股票逆转了涨幅，我们开始抛售，因为它全天都在下跌 **（7）。**到当天结束时，我们在不到一周的时间里以超过 9% 的交易收益退出了 ONON。
+
+
+But that doesn't mean we are done with the stock. Usually a reversal like that would lead to more weakness in the short term. And ONON did get worse the next day but then it held tight over the next four days **(8)**.  
+但这并不意味着我们已经结束了这只股票。通常，像这样的反转会在短期内导致更多的疲软。ONON 第二天确实变得更糟，但在接下来的四天里它一直保持着 **（8）。**
+
+
+The tight action is a strong cue that this stock might be ready to go again.  
+紧缩的动作强烈暗示这只股票可能已准备好再次上涨。
+
+
+
+*More details on past trades are accessible to subscribers and trialists to SwingTrader. [Free trials](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH) are available. Follow Nielsen on X, formerly known as Twitter, at [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen).  
+SwingTrader 的订阅者和试用者可以访问有关过去交易的更多详细信息。提供[免费试用](http://shop.investors.com/offer/splashresponsive.aspx?id=SwingTrader&src=A011LPH)。在 X 上关注尼尔森，前身为 Twitter，网址为 [@IBD\_JNielsen](https://twitter.com/IBD_JNielsen)。*
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[Want To Know Our Swing Trading Strategies? Watch This Weekly Update.  
+想知道我们的波段交易策略吗？观看此每周更新。](https://www.investors.com/ibd-videos/category/swing-trader-status-update?archive=1)
+
+
+[Warren Buffett turned 94! How different is his trading style from The IBD Methodology?  
+沃伦·巴菲特 （Warren Buffett） 94 岁了！他的交易风格与 IBD 方法有何不同？](https://www.investors.com/how-to-invest/warren-buffett-lessons-active-growth-investors/)
+
+
+[Eric Krull Shares How This Market Rally Stacks Up To History  
+Eric Krull 分享了这场市场反弹如何成为历史](https://www.investors.com/ibd-videos/videos/how-to-cope-with-wild-market-swings-as-fed-cuts-rates)
+
+
+[Follow Premarket And After-The-Open Action With IBD Experts  
+跟随 IBD 专家的盘前和开盘后行动](https://get.investors.com/ibd-live/)
 
 
 
