--- a/_columns/The_Big_Picture/zh-cn/2024-10-15.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-15.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Steps Back As ASML Earnings Spark Chip Sell-Off; Russell 2000 Fades
+  Stock Market Steps Back As ASML Earnings Spark Chip Sell-Off; Russell 2000 Fades	由于 ASML 收益引发芯片抛售，股市回落;罗素 2000 指数褪色
 date: 2024-10-15 17:27 -0700
 author: KEN SHREVE
 ---
@@ -10,34 +10,42 @@ author: KEN SHREVE
 
 
 
-Major stock indexes came under selling pressure in the stock market Tuesday after semiconductor-equipment firm **ASML** ([ASML](https://research.investors.com/quote.aspx?symbol=ASML)) accidentally released its [quarterly earnings report](https://www.investors.com/news/technology/asml-stock-crashes-on-q3-report/) a day early and warned of weaker revenue in 2025.
+Major stock indexes came under selling pressure in the stock market Tuesday after semiconductor-equipment firm **ASML** ([ASML](https://research.investors.com/quote.aspx?symbol=ASML)) accidentally released its [quarterly earnings report](https://www.investors.com/news/technology/asml-stock-crashes-on-q3-report/) a day early and warned of weaker revenue in 2025.  
+半导体设备公司 **ASML** （[ASML](https://research.investors.com/quote.aspx?symbol=ASML)） 意外提前一天发布季度[收益报告](https://www.investors.com/news/technology/asml-stock-crashes-on-q3-report/)并警告称 2025 年收入将疲软，主要股指周二在股市面临抛售压力。
 
 
-ASML shares crashed 16%, helping fuel a 1% decline for the Nasdaq composite. For ASML, volume of more than 9 million shares was the  heaviest for a down day in at least 10 years. The selling spread quickly throughout the chip-equipment group, which was the day's worst-performer, down around 10%. **KLA** ([KLAC](https://research.investors.com/quote.aspx?symbol=KLAC)) swooned nearly 15% and closed below its 200-day moving average.
+ASML shares crashed 16%, helping fuel a 1% decline for the Nasdaq composite. For ASML, volume of more than 9 million shares was the  heaviest for a down day in at least 10 years. The selling spread quickly throughout the chip-equipment group, which was the day's worst-performer, down around 10%. **KLA** ([KLAC](https://research.investors.com/quote.aspx?symbol=KLAC)) swooned nearly 15% and closed below its 200-day moving average.  
+ASML 股价暴跌 16%，推动纳斯达克综合指数下跌 1%。对于 ASML 来说，超过 900 万股的成交量是至少 10 年来最大的下跌日。抛售迅速蔓延到当天表现最差的芯片设备组，下跌约 10%。**KLA** （[KLAC）](https://research.investors.com/quote.aspx?symbol=KLAC) 暴跌近 15%，收于其 200 天移动平均线下方。
 
 
 
 
-The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) slumped more than 5% and paid a visit to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/). **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which gets a 21% weighting in the ETF, fell 4.7%. But the downdraft only resulted in a test of the 10-day moving average. The second-highest-weighted holding — **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) — gave back 2.6% after rising in eight of the past nine sessions. Taiwan Semi [reports earnings](https://www.investors.com/research/earnings-preview/earnings-calendar-netflix-nflx-intuitive-surgical-isrg-taiwan-semi-tsm/) Thursday before the open.
+The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) slumped more than 5% and paid a visit to its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/). **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)), which gets a 21% weighting in the ETF, fell 4.7%. But the downdraft only resulted in a test of the 10-day moving average. The second-highest-weighted holding — **Taiwan Semiconductor** ([TSM](https://research.investors.com/quote.aspx?symbol=TSM)) — gave back 2.6% after rising in eight of the past nine sessions. Taiwan Semi [reports earnings](https://www.investors.com/research/earnings-preview/earnings-calendar-netflix-nflx-intuitive-surgical-isrg-taiwan-semi-tsm/) Thursday before the open.  
+VanEck Semiconductor ETF （[SMH](https://research.investors.com/quote.aspx?symbol=SMH)） 暴跌超过 5%，并触及其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)。在 ETF 中占 21% 权重的 **Nvidia** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 下跌 4.7%。但下跌只导致了对 10 天移动平均线的测试。权重第二高的持股 — **台积电** （[TSM](https://research.investors.com/quote.aspx?symbol=TSM)） — 在过去 9 个交易日中的 8 个交易日上涨后回吐了 2.6%。Taiwan Semi 周四开盘前[公布财报](https://www.investors.com/research/earnings-preview/earnings-calendar-netflix-nflx-intuitive-surgical-isrg-taiwan-semi-tsm/)。
 
 
-The Nasdaq on Monday closed in on its July 11 high of 18,671 but stopped short. The index is still in a bullish technical setup as it holds above its short-term moving averages and the 18,000 level. Despite the stiff selling on the Nasdaq, decliners only had a tiny edge over advancers. But volume rose sharply from Monday, giving the index a [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).
+The Nasdaq on Monday closed in on its July 11 high of 18,671 but stopped short. The index is still in a bullish technical setup as it holds above its short-term moving averages and the 18,000 level. Despite the stiff selling on the Nasdaq, decliners only had a tiny edge over advancers. But volume rose sharply from Monday, giving the index a [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).  
+纳斯达克指数周一收于 7 月 11 日的高点 18,671 点，但收于短盘。该指数仍处于看涨的技术结构中，因为它保持在短期移动平均线和 18,000 水平上方。尽管纳斯达克股市遭遇沉闷抛售，但下跌者仅比上涨者略有优势。但从周一开始，成交量急剧上升，为该指数提供了一个[分发日](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/)。
 
 
-If distribution days start to cluster over a short amount of time, it could cause problems for the stock market uptrend. For now, it's a manageable count on the Nasdaq and S&P 500.
+If distribution days start to cluster over a short amount of time, it could cause problems for the stock market uptrend. For now, it's a manageable count on the Nasdaq and S&P 500.  
+如果分发日在短时间内开始聚集，可能会给股市上升趋势带来问题。目前，纳斯达克和标准普尔 500 指数的数量还算可控。
 
 
-Stock Market Today: Small Caps Rise
------------------------------------
+Stock Market Today: Small Caps Rise今日股市：小盘股上涨
+---------------------------------------------
 
 
-![market pulse](https://www.investors.com/wp-content/uploads/2024/10/MP101524-205x300.jpg)After clearing a three-week trendline Friday, the Russell 2000 broke out over its Sept. 18 high. But a 1% intraday gain faded to less than 0.1% by the close.
+![market pulse](https://www.investors.com/wp-content/uploads/2024/10/MP101524-205x300.jpg)After clearing a three-week trendline Friday, the Russell 2000 broke out over its Sept. 18 high. But a 1% intraday gain faded to less than 0.1% by the close.  
+在周五突破三周趋势线后，罗素 2000 指数突破了 9 月 18 日的高点。但 1% 的盘中涨幅在收盘时回落至不到 0.1%。
 
 
-Digital pharmacy **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) soared another 11% in the stock market today after jumping nearly 10% Monday. The catalyst Monday was news that the Food and Drug Administration would reconsider its decision to bar compounders from selling knockoff versions of **Eli Lilly**'s ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)) weight-loss drug tirzepatide.
+Digital pharmacy **Hims & Hers Health** ([HIMS](https://research.investors.com/quote.aspx?symbol=HIMS)) soared another 11% in the stock market today after jumping nearly 10% Monday. The catalyst Monday was news that the Food and Drug Administration would reconsider its decision to bar compounders from selling knockoff versions of **Eli Lilly**'s ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)) weight-loss drug tirzepatide.  
+数字药店**Hims & Hers Health** （[HIMS）](https://research.investors.com/quote.aspx?symbol=HIMS)在周一上涨近10%后，今天在股市中又飙升了11%。周一的催化剂是，美国食品和药物管理局（Food and Drug Administration）将重新考虑其禁止化合物生产商销售**礼来**（[LLY](https://research.investors.com/quote.aspx?symbol=LLY)）减肥药tirzepatide的山寨版的决定。
 
 
-Losses were  milder in the Dow Jones Industrial Average and S&P 500, which both closed lower by less than 0.8%. Volume also rose on the NYSE, giving the S&P 500 a distribution day. Winners beat losers on the NYSE by a tiny amount.
+Losses were  milder in the Dow Jones Industrial Average and S&P 500, which both closed lower by less than 0.8%. Volume also rose on the NYSE, giving the S&P 500 a distribution day. Winners beat losers on the NYSE by a tiny amount.  
+道琼斯工业平均指数和标准普尔 500 指数的跌幅较为温和，收盘均下跌不到 0.8%。纽约证券交易所的成交量也有所上升，为标准普尔 500 指数提供了分发日。纽约证券交易所的赢家以微弱的幅度击败了输家。
 
 
 
@@ -45,7 +53,8 @@ Losses were  milder in the Dow Jones Industrial Average and S&P 500, which both
 ---
 
 
-**[Stay In Sync With The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Stay In Sync With The Market With IBD's ETF Market Strategy  
+通过 IBD 的 ETF 市场策略与市场保持同步](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
@@ -53,54 +62,68 @@ Losses were  milder in the Dow Jones Industrial Average and S&P 500, which both
 ---
 
 
-Cruise line operators like **Carnival** ([CCL](https://research.investors.com/quote.aspx?symbol=CCL)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)) and **Norwegian Cruise Line** ([NCLH](https://research.investors.com/quote.aspx?symbol=NCLH)) outperformed in the S&P 500, closing higher by about 3% to 7%.
+Cruise line operators like **Carnival** ([CCL](https://research.investors.com/quote.aspx?symbol=CCL)), **Royal Caribbean** ([RCL](https://research.investors.com/quote.aspx?symbol=RCL)) and **Norwegian Cruise Line** ([NCLH](https://research.investors.com/quote.aspx?symbol=NCLH)) outperformed in the S&P 500, closing higher by about 3% to 7%.  
+**嘉年华** （[CCL](https://research.investors.com/quote.aspx?symbol=CCL)）、**皇家加勒比** （[RCL](https://research.investors.com/quote.aspx?symbol=RCL)） 和**挪威邮轮公司** （[NCLH）](https://research.investors.com/quote.aspx?symbol=NCLH) 等邮轮运营商在标准普尔 500 指数中表现出色，收盘上涨约 3% 至 7%。
 
 
-There was no news to account for the group move, but [Leaderboard](https://leaderboard.investors.com) stock **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)) reversed higher for a gain of nearly 2%. Viking is still in the 5% buy zone from a 37.25 buy point. But after five straight weekly price gains — and another taking shape this week — Viking could be ready to pause and consolidate.
+There was no news to account for the group move, but [Leaderboard](https://leaderboard.investors.com) stock **Viking** ([VIK](https://research.investors.com/quote.aspx?symbol=VIK)) reversed higher for a gain of nearly 2%. Viking is still in the 5% buy zone from a 37.25 buy point. But after five straight weekly price gains — and another taking shape this week — Viking could be ready to pause and consolidate.  
+没有消息可以解释集团变动，但 [Leaderboard](https://leaderboard.investors.com) 股票 **Viking** （[VIK](https://research.investors.com/quote.aspx?symbol=VIK)） 逆转走高，上涨了近 2%。Viking 仍处于 5% 买入区，买入点为 37.25。但在连续五周价格上涨（本周又一次形成）之后，Viking 可能准备暂停并整合。
 
 
-**Raymond James** ([RJF](https://research.investors.com/quote.aspx?symbol=RJF)) also had a fine day in the S&P 500, up nearly 2.5% ahead of next week's earnings report. Raymond James cleared a lengthy consolidation with a 131.19 entry. The investment bank hasn't announced an official date, but last year it reported quarterly results on Oct. 25.
+**Raymond James** ([RJF](https://research.investors.com/quote.aspx?symbol=RJF)) also had a fine day in the S&P 500, up nearly 2.5% ahead of next week's earnings report. Raymond James cleared a lengthy consolidation with a 131.19 entry. The investment bank hasn't announced an official date, but last year it reported quarterly results on Oct. 25.  
+**Raymond James** （[RJF](https://research.investors.com/quote.aspx?symbol=RJF)） 在标准普尔 500 指数中也表现不错，在下周的收益报告发布前上涨了近 2.5%。Raymond James 以 131.19 的成绩完成了漫长的盘整。这家投资银行尚未宣布正式日期，但去年 10 月 25 日公布了季度业绩。
 
 
-What To Do Now
---------------
+What To Do Now 现在该做什么
+---------------------
 
 
-As Q3 earnings season kicks into gear, be aware of earnings dates in your portfolio. Has a big winner rallied furiously ahead of results? With a large profit cushion, you'll likely be able to sit through the report. With a smaller profit cushion, there's nothing wrong with taking partial profits ahead of the report.
+As Q3 earnings season kicks into gear, be aware of earnings dates in your portfolio. Has a big winner rallied furiously ahead of results? With a large profit cushion, you'll likely be able to sit through the report. With a smaller profit cushion, there's nothing wrong with taking partial profits ahead of the report.  
+随着第三季度财报季的开始，请注意投资组合中的财报日期。大赢家在结果公布之前是否疯狂反弹？凭借较大的利润缓冲，您很可能能够坐下来阅读报告。由于利润缓冲较小，在报告发布之前获得部分利润并没有错。
 
 
 
-For now, an invested percentage of 80%-100% still makes sense as major stock indexes stay on strong uptrends. Take stock of your current holdings by identifying the strongest performers and weaker ones. Funnel money into your winners when alternate entries arise, and pare down the laggards.
+For now, an invested percentage of 80%-100% still makes sense as major stock indexes stay on strong uptrends. Take stock of your current holdings by identifying the strongest performers and weaker ones. Funnel money into your winners when alternate entries arise, and pare down the laggards.  
+目前，80%-100% 的投资百分比仍然有意义，因为主要股指保持强劲的上升趋势。通过识别表现最强和较弱的股票来评估您当前的持仓。当出现替代条目时，将资金注入您的获胜者，并削减落后者。
 
 
-In the Dow Jones index, an earnings sell-off for **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) was offset by gains of at least 1.5% for **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)), **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)), **Johnson & Johnson** ([JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)) and **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)).
+In the Dow Jones index, an earnings sell-off for **UnitedHealth Group** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) was offset by gains of at least 1.5% for **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)), **Merck** ([MRK](https://research.investors.com/quote.aspx?symbol=MRK)), **Johnson & Johnson** ([JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)) and **Walmart** ([WMT](https://research.investors.com/quote.aspx?symbol=WMT)).  
+在道琼斯指数中，**联合健康集团**（[UNH](https://research.investors.com/quote.aspx?symbol=UNH)）的收益抛售被**波音**（[BA）、](https://research.investors.com/quote.aspx?symbol=BA)**默克**（[MRK](https://research.investors.com/quote.aspx?symbol=MRK)）、**强生**（[JNJ](https://research.investors.com/quote.aspx?symbol=JNJ)）和**沃尔玛**（[WMT）](https://research.investors.com/quote.aspx?symbol=WMT)至少1.5%的涨幅所抵消。
 
 
-China stocks lagged badly in the [MarketSurge Growth 250](https://marketsurge.investors.com) as investors wonder if recently announced stimulus measures out of China will be enough to reignite growth. **Futu** ([FUTU](https://research.investors.com/quote.aspx?symbol=FUTU)), **JD.com** ([JD](https://research.investors.com/quote.aspx?symbol=JD)) and **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)) all cratered around 9%. The latter erased a 20% gain from its 58 buy point.
+China stocks lagged badly in the [MarketSurge Growth 250](https://marketsurge.investors.com) as investors wonder if recently announced stimulus measures out of China will be enough to reignite growth. **Futu** ([FUTU](https://research.investors.com/quote.aspx?symbol=FUTU)), **JD.com** ([JD](https://research.investors.com/quote.aspx?symbol=JD)) and **Trip.com** ([TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)) all cratered around 9%. The latter erased a 20% gain from its 58 buy point.  
+中国股市在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中严重落后，因为投资者想知道最近宣布的中国刺激措施是否足以重新点燃增长。**富途** （[FUTU）、](https://research.investors.com/quote.aspx?symbol=FUTU)**JD.com** （[JD）](https://research.investors.com/quote.aspx?symbol=JD) 和 **Trip.com** （[TCOM](https://research.investors.com/quote.aspx?symbol=TCOM)） 均下跌约 9%。后者从其 20 个买入点抹去了 58% 的收益。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101524.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_101524.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Help You Stay In Step With The Market Trend  
+查看 IBD 的新风险敞口水平，以帮助您紧跟市场趋势](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition](https://get.investors.com/marketsurge/?src=apa1bq)
+[Spot Buy Points And Sell Signals With MarketSurge Pattern Recognition  
+使用 MarketSurge 模式识别进行现货买入和卖出信号](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Futures: Indexes Fall As ASML Hits Chips; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-asml-slams-nvidia-chip-sector/)
+[Futures: Indexes Fall As ASML Hits Chips; What To Do Now  
+期货：随着 ASML 击中筹码，指数下跌;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-asml-slams-nvidia-chip-sector/)
 
 
 
